--- a/report/tables/currencies_tickers.tex
+++ b/report/tables/currencies_tickers.tex
@@ -1,10 +1,10 @@
 \begin{longtable}{|l|l|}
 \hline
-\textbf{Symbol} & \textbf{Name}  \\
+\textbf{Symbol} & \textbf{Name}  \\ \midrule
 \endfirsthead
 
 \hline
-\textbf{Symbol} & \textbf{Name} \\
+\textbf{Symbol} & \textbf{Name} \\ \midrule
 \endhead
 
 \endfoot
