--- a/report/tables/drl_algorithms_comparison.tex
+++ b/report/tables/drl_algorithms_comparison.tex
@@ -1,8 +1,15 @@
 \begin{longtable}{|l|l|l|l|}
     \hline
-    \textbf{Algorithm} & \textbf{Policy Type} & \textbf{On/Off Policy} & \textbf{Key Idea} \\
+    \textbf{Algorithm} & \textbf{Policy Type} & \textbf{On/Off Policy} & \textbf{Key Idea} \\ \midrule
+    \endfirsthead
+
     \hline
+    \textbf{Algorithm} & \textbf{Policy Type} & \textbf{On/Off Policy} & \textbf{Key Idea} \\ \midrule
     \endhead
+
+    \endfoot
+
+    \hline
     \acrshort{a2c} & Stochastic & On-Policy & Advantage Function Estimation \\ \hline
     \acrshort{ppo} & Stochastic & On-Policy & Clipped Policy Updates \\ \hline
     \acrshort{ddpg} & Deterministic & Off-Policy & Actor-Critic + Replay buffer \\ \hline
