--- a/report/tables/experiments_summary.tex
+++ b/report/tables/experiments_summary.tex
@@ -1,10 +1,10 @@
 \begin{longtable}{|p{3cm}|p{3cm}|p{3.5cm}|p{3.5cm}|}
     \hline
-    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Reward Function} & \textbf{Hyper-parameter Tuning} \\
+    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Reward Function} & \textbf{Hyper-parameter Tuning} \\ \midrule
     \endfirsthead
 
     \hline
-    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Reward Function} & \textbf{Hyper-parameter Tuning} \\
+    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Reward Function} & \textbf{Hyper-parameter Tuning} \\ \midrule
     \endhead
 
     \endfoot
