--- a/report/tables/ftse100_tickers.tex
+++ b/report/tables/ftse100_tickers.tex
@@ -1,10 +1,10 @@
 \begin{longtable}{|p{2cm}|p{4cm}|p{6cm}|}
 \hline
-\textbf{Symbol} & \textbf{Name} & \textbf{Industry} \\
+\textbf{Symbol} & \textbf{Name} & \textbf{Industry} \\ \midrule
 \endfirsthead
 
 \hline
-\textbf{Symbol} & \textbf{Name} & \textbf{Industry} \\
+\textbf{Symbol} & \textbf{Name} & \textbf{Industry} \\ \midrule
 \endhead
 
 \endfoot
