Reword Issues section

--- a/report/contents/issues.tex
+++ b/report/contents/issues.tex
@@ -4,17 +4,17 @@ The development and deployment of \acrfull{drl} algorithms to perform profitable
 
 \section{Legal Issues} \label{sec:legal-issues}
 
-When deploying \acrfull{ml} algorithms in finance, the \acrfull{eu}'s \acrfull{aiact} \cite{AIAct2024} classifies them as high-risk under Article 6 \footnote{https://artificialintelligenceact.eu/article/6/} due to their potential impact on an individual's economic well-being. Consequently, high-risk systems must comply with Chapter 3 - Section 2, Articles 9-15 \footnote{https://artificialintelligenceact.eu/section/3-2/}, which include the obligations for risk management, data governance, documentation, transparency and human supervision. In particular, Article 13 \footnote{https://artificialintelligenceact.eu/article/13/} requires that high-risk AI systems "enable deployers to interpret a system's output". The use of explainability techniques ensures that the decision-making process of the algorithm can be understood and justified, thus adhering to the legal requirements set forth by the \acrshort{aiact}.
+When deploying \acrfull{ml} algorithms in finance, the \acrfull{eu}'s \acrfull{aiact} \cite{AIAct2024} classifies them as high-risk under Article 6 due to their potential impact on an individual's economic well-being. Consequently, high-risk systems must comply with Chapter 3 - Section 2, Articles 9-15, which include the obligations for risk management, data governance, documentation, transparency and human supervision. In particular, Article 13 requires that high-risk AI systems's outputs are interpretable. The use of explainability techniques ensures that the decision-making process of the algorithm can be understood and justified, thus adhering to the legal requirements set forth by the \acrshort{aiact}.
 
-In addition, \gls{algorithmictrading} systems must adhere to the \acrlong{eu} directive on \acrfull{mifid} \cite{MiFIDII} and the \acrfull{uk} \acrfull{fca} guidance on \textit{Algorithmic Trading Compliance in Wholesale Markets}. These regulations require robust governance and oversight frameworks, risk controls and thorough testing infrastructure. In this project, back-testing has been carried out to assess the algorithm's performance under varying market conditions followed by explainability techniques to enable auditability of the system.
+In addition, \gls{algorithmictrading} systems must adhere to the \acrlong{eu} directive on \acrfull{mifid} \cite{MiFIDII} and the \acrfull{uk} \acrfull{fca} guidance on \textit{Algorithmic Trading Compliance in Wholesale Markets}. These regulations require robust governance and oversight frameworks, risk controls and thorough testing infrastructure. In this project, back-testing has been carried out to assess the algorithm's performance under varying market conditions followed by explainability techniques to enable the auditability of the system.
 
 \section{Social Issues} \label{sec:social-issues}
 
 Despite the growing exposure to \acrfull{ai} systems with the rise of \acrfullpl{llm}, there is still a significant lack of understanding and trust in these systems. Some of the reasons behind this mistrust include:
 \begin{itemize}
-    \item The “black box” nature of models, making outputs hard to interpret.
-    \item Lack of human-like qualities in the models.
-    \item Perceived limitations to adapt to new situations and learn from previous mistakes.
+    \item the \gls{blackbox} nature of models, making outputs hard to interpret,
+    \item lack of human-like qualities in the models, and
+    \item perceived limitations to adapt to new situations and learn from previous mistakes.
 \end{itemize}
 
 In the context of this work, the integration of explainability techniques addresses the black box behaviour of the implemented technology by offering clear, data-driven justifications. However, transparency must also be accessible. It is essential to provide a user-friendly interface to easily access the explanations and generate plain language descriptions for non-technical audiences.
@@ -35,6 +35,6 @@ Finally, potential biases in the training data or model structure could result i
 
 \section{Professional Issues} \label{sec:professional-issues}
 
-This work has been conducted in accordance with the \acrfull{bcs} Code of Conduct \cite{BCSCodeConduct} and the \acrfull{iet} Rules of Conduct \cite{IETRules}. All the work in this report is original unless stated otherwise, and all external contributions are explicitly acknowledged, following the principles of the \acrfull{bcs} Code of Conduct \cite{BCSCodeConduct}. Moreover, all third-party libraries, datasets and code have been explicitly acknowledged and their use complies with the respective licences and guidelines. 
+This work has been conducted in accordance with the \acrfull{bcs} Code of Conduct \cite{BCSCodeConduct} and the \acrfull{iet} Rules of Conduct \cite{IETRules}. All the work in this report is original unless stated otherwise, and all external contributions are explicitly acknowledged, following the principles of the \acrshort{bcs} Code of Conduct \cite{BCSCodeConduct}. Moreover, all third-party libraries, datasets and code have been explicitly acknowledged and their use complies with the respective licences and guidelines.
 
 Most importantly, the project has been conducted within my own area of expertise: computational finance, \acrlong{rl}, and \acrlong{xai}. If any aspects of the project were beyond these, proper academic sources have been consulted to ensure the integrity and quality of the work. 
