--- a/report/tables/dataset_split.tex
+++ b/report/tables/dataset_split.tex
@@ -9,7 +9,7 @@
 
     \endfoot
     \hline
-    DJIA & Jan 2016 - Dec 2022 & Jan 2023 - Dec 2023 & Jan 2024 - Jul 2025 \\
+    Dow Jones 30 & Jan 2016 - Dec 2022 & Jan 2023 - Dec 2023 & Jan 2024 - Jul 2025 \\
     \hline
     Euro Stoxx 50 & Jan 2016 - Dec 2023 & Not applicable & Jan 2024 - Jul 2025 \\
     \hline
