--- a/report/tables/experiments_summary.tex
+++ b/report/tables/experiments_summary.tex
@@ -10,13 +10,11 @@
     \endfoot
     \hline
     Dow Jones 30    & Simple         & Change in Value & Yes \\ \hline
-    Dow Jones 30    & Covariance     & Change in Value & Yes \\ \hline
+    Dow Jones 30    & Covariance     & Change in Value & No \\ \hline
     Dow Jones 30    & Indicators     & Change in Value & Yes \\ \hline
-    Dow Jones 30    & Complete       & Change in Value & Yes \\ \hline
+    Dow Jones 30    & Complete       & Change in Value & No \\ \hline
     Dow Jones 30    & Simple         & Sharpe Ratio    & Yes \\ \hline
-    Dow Jones 30    & Covariance     & Sharpe Ratio    & Yes \\ \hline
     Dow Jones 30    & Indicators     & Sharpe Ratio    & Yes \\ \hline
-    Dow Jones 30    & Complete       & Sharpe Ratio    & Yes \\ \hline
     Euro Stoxx 50   & Simple         & Change in Value & No  \\ \hline
     Euro Stoxx 50   & Indicators     & Change in Value & No  \\ \hline
     FTSE 100        & Simple         & Change in Value & No  \\ \hline
@@ -24,9 +22,11 @@
     Commodities     & Simple         & Change in Value & No  \\ \hline
     Commodities     & Covariance     & Change in Value & No  \\ \hline
     Commodities     & Indicators     & Change in Value & No  \\ \hline
+    Commodities     & Complete       & Change in Value & No  \\ \hline
     Currencies      & Simple         & Change in Value & No  \\ \hline
     Currencies      & Covariance     & Change in Value & No  \\ \hline
     Currencies      & Indicators     & Change in Value & No  \\ \hline
+    Currencies      & Complete       & Change in Value & No  \\ \hline
 \caption{Summary of experiments conducted.}
 \label{tab:experiments-summary}
 \end{longtable}
