--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -92,7 +92,7 @@ Aside from computing relevant performance metrics, the algorithms will be benchm
 \begin{itemize}
     \item Equal-weighted portfolio: A simple strategy that allocates an equal weight to each asset in the portfolio.
     \item Mean-variance optimisation: A classic portfolio optimisation method that aims to maximise Sharpe ratio.
-    \item Min-variance portfolio: A classic portfolio optimisation method that seeks to minimise the portfolio's volatility.
+    \item Min-variance portfolio: Another classic portfolio optimisation method that seeks to minimise the portfolio's volatility.
     \item Momentum portfolio: A strategy that invests in assets with positive momentum, i.e. those that have performed well in the previous time step, and avoids those with negative momentum.
 \end{itemize}
 
