Minor nomenclature changes

--- a/report/contents/nomenclature.tex
+++ b/report/contents/nomenclature.tex
@@ -43,11 +43,11 @@
 \nomenclature[E, 11]{$\mathcal{N}(0, 1)$}{Standard normal distribution}
 
 %% Functions
-\nomenclature[F, 01]{$f: \mathbb{A} \to \mathbb{B}$}{Function $f$ with domain $\mathbb{A}$ and Range $\mathbb{B}$}
+\nomenclature[F, 01]{$f: \mathbb{A} \to \mathbb{B}$}{Function $f$ with domain $\mathbb{A}$ and range $\mathbb{B}$}
 \nomenclature[F, 02]{$f(x)$}{Function $f$ evaluated at $x$}
-\nomenclature[F, 03]{$f(x;\theta)$}{Function of $x$ with parameters $\theta$}
-\nomenclature[F, 04]{$f'(x)$}{Derivative of function $f$ at $x$}
-\nomenclature[F, 05]{$\int f(x) \, dx$}{Integral of function $f$}
+\nomenclature[F, 03]{$f(x;\theta)$}{Function $f$ with parameters $\theta$ evaluated at $x$}
+\nomenclature[F, 04]{$f'(x)$}{Derivative of function $f$}
+\nomenclature[F, 05]{$\int f(x) \, dx$}{Integral of function $f$ with respect to $x$}
 \nomenclature[F, 06]{$\min f(x)$}{Minimum of function $f$}
 \nomenclature[F, 07]{$\min_x f(x)$}{Minimum of function $f$ with respect to $x$}
 \nomenclature[F, 08]{$\max f(x)$}{Maximum of function $f$}
