Report: Revision 16th August (#33)

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -6,25 +6,10 @@
 \programme{Computational Finance M.Sc.}
 \supervisor{Riaz Ahmad}
 \wordcount{\input{wordcount.tex}}
-\title{Explainable Deep Learning for Portfolio Optimisation}
+\title{Explainable Deep Reinforcement Learning for Portfolio Optimisation of Financial Assets}
 \author{Ingrid Pérez Aguilera}
 \ReleaseProject{1} 
 \department{Informatics} 
-
-\usepackage{float}
-\usepackage{hyperref}
-\usepackage[utf8]{inputenc}
-\usepackage{graphbox}
-\usepackage{pgfgantt}
-\usepackage{nomencl}
-\usepackage[acronym,nonumberlist]{glossaries}
-\usepackage{amsmath}
-\usepackage{algorithm}
-\usepackage{algpseudocode}
-\usepackage{bm}
-\usepackage{multirow}
-\usepackage{booktabs}
-\usepackage{longtable}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{exa}{Example}[section]
@@ -52,6 +37,7 @@
 \setcounter{secnumdepth}{5}
 \setlength{\marginparwidth}{2cm} % Adjust marginparwidth to avoid todonotes issues
 \renewcommand{\contentsname}{Table of Contents}
+\setlength{\nomlabelwidth}{2cm} % Adjust space for nomenclature labels
 
 \makeglossaries
 \makenomenclature
