--- a/report/tables/dataset_split.tex
+++ b/report/tables/dataset_split.tex
@@ -1,8 +1,15 @@
 \begin{longtable}{|l|l|l|l|}
     \hline
-    \textbf{Dataset} & \textbf{Training Period} & \textbf{Validation Period} & \textbf{Testing Period} \\
+    \textbf{Dataset} & \textbf{Training Period} & \textbf{Validation Period} & \textbf{Testing Period} \\ \midrule
+    \endfirsthead
+
     \hline
-    DJIA & Jan 2016 - Dec 2022 & Jan 2023 - Dec 2023 & Jan 2024 - Jul 2025 \\
+    \textbf{Dataset} & \textbf{Training Period} & \textbf{Validation Period} & \textbf{Testing Period} \\ \midrule
+    \endhead
+
+    \endfoot
+    \hline
+    Dow Jones 30 & Jan 2016 - Dec 2022 & Jan 2023 - Dec 2023 & Jan 2024 - Jul 2025 \\
     \hline
     Euro Stoxx 50 & Jan 2016 - Dec 2023 & Not applicable & Jan 2024 - Jul 2025 \\
     \hline
