Add algorithm comparison experiment

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -119,5 +119,6 @@
 \include{appendix/hyperparameter_tuning}
 \include{appendix/datasets}
 \include{appendix/evaluation_metrics}
+\include{appendix/experiments}
 
 \end{document}
