--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -99,3 +99,30 @@ Aside from computing relevant performance metrics, the algorithms will be benchm
 The implementation of the mean-variance and the min-variance portfolio allocation strategies has been done using the \texttt{PyPortfolioOpt} Python library \cite{Martin2021}, whereas the equal-weighted and momentum strategies have been implemented using custom code.
 
 Finally, if the portfolio is made up of equities of a relevant index, the benchmark will also include the index itself, which serves as a reference point for the performance of the portfolio. 
+
+\section{Experiment: Algorithm Comparison} \label{sec:exp-algorithm-comparison}
+
+In this section, the results of the experiment to identify the suitability of the implemented \acrshort{drl} algorithms for portfolio optimisation under different market conditions are presented. The algorithms are trained on data with a simple environment representation, which includes the \acrshort{ohlcv} prices of the assets, and evaluated on the 5 datasets. The table \ref{tab:experiment_algorithms_a2c} summarises the results of the experiment for the \acrshort{a2c} algorithm, where each row corresponds to a different dataset and each column to a different performance metric. The results for the other algorithms are presented in Appendix \ref{app:experiment_algorithms_comparison}.
+
+\input{tables/experiment_algorithms_a2c.tex}
+
+For the case of \acrshort{a2c}, the algorithm demonstrates competitive performance particularly for the DowJones30 dataset, achieving a cumulative return of 0.22 and a Sharpe ratio of 1.32. Positive results are also obtained with the commodities dataset, which demonstrates the highest cumulative return of 0.24 and a Sharpe ratio of 1.14. Despite being of the same asset class, the EuroStoxx50 and the FTSE100 datasets show relatively lower performance, with cumulative returns of 0.15 and 0.11, respectively. With regard to the currencies dataset, the performance of the algorithm is less impressive, with a cumulative return of -0.0012 and a Sharpe ratio of -0.0018. 
+
+Similar observations can be made for the other algorithms, although it is worth pointing out that the performance varies significantly across different datasets. \todo{COMPLETE}
+
+Taking the DowJones30 dataset with an environment representation made up of the \acrshort{ohlcv} prices and the indicators, the performance of the algorithms can be benchmarked against traditional strategies and the \acrshort{djia} Index. The evolution of the cumulative returns over the testing period is shown in Figure \ref{fig:dowjones30_indicators_cumulative_returns} and the corresponding performance metrics are summarised in Table \ref{tab:experiment_algorithms_dow30}.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{figures/dowjones30_indicators_cumulative_returns.png}
+    \caption{Evolution of the Cumulative Returns for the DowJones30 dataset with the \acrshort{ohlcv} prices and indicators environment representation.}
+    \label{fig:dowjones30_indicators_cumulative_returns}
+\end{figure}
+
+\input{tables/experiment_algorithms_dow30.tex}
+
+The results show that all the algorithms outperform the performance of the index for all the considered metrics, as well as the min-variance portfolio. Out of all the algorithms, \acrshort{ddpg} achieves the highest cumulative return of 0.23 and a Sharpe ratio of 1.49, followed by \acrshort{td3} with a cumulative return of 0.22 and a Sharpe ratio of 1.39. The \acrshort{a2c} algorithm also performs well, while \acrshort{ppo} has the lowest performance with a cumulative return of 0.19 and a Sharpe ratio of 1.24. However, none of these outperform the mean-variance and momentum benchmark strategies, with the latter achieving a Sharpe ratio of 1.74 and a cumulative return of 0.39, which is significantly higher than the performance of the \acrshort{drl} algorithms.
+
+% \section{Experiment: Environment Representation} \label{sec:environment-representation}
+% \section{Experiment: Hyper-parameter Tuning} \label{sec:hyper-parameter-tuning}
+% \section{Experiment: Reward Function} \label{sec:reward-function}
