--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -39,7 +39,7 @@ Another particular challenge is the choice of suitable reward function, which is
 
 Finally, the performance of the algorithms is closely related to the choice of hyper-parameters. As such, the hyper-parameters were tuned using Bayesian optimisation, to find the optimal configuration for each algorithm and dataset combination.
 
-Overall, the experiments were designed to evaluate the performance of the implemented \acrshort{drl} algorithms in different scenarios, with the goal of finding the most suitable algorithm for portfolio optimisation. However, testing 5 algorithms on 5 distinct datasets with 4 possible environment representations and 2 potential reward functions would result in a total of 40 different experiments. Additionally, optimising the parameters for each experiment further expands the experimental space and significantly increases the computational time required. Due to limited computational resources\footnote{The university did not provide access to a computing cluster; therefore, all experiments were conducted on a personal computer.}, the scope of experiments was adjusted as follows:
+Overall, the experiments were designed to evaluate the performance of the implemented \acrshort{drl} algorithms in different scenarios, with the goal of finding the most suitable algorithm for portfolio optimisation. However, testing five algorithms on five distinct datasets with four possible environment representations and two potential reward functions would result in a total of forty different experiments. Additionally, optimising the parameters for each experiment further expands the experimental space and significantly increases the computational time required. Due to limited computational resources\footnote{The university did not provide access to a computing cluster; therefore, all experiments were conducted on a personal computer.}, the scope of experiments was adjusted as follows:
 \begin{itemize}
     \item Hyper-parameter tuning was performed only for the Dow Jones 30 dataset with simple and indicators environment representation, as it is the smallest equities dataset and requires less computational time.
     \item Since the covariance matrix, significantly increases the dimensionality of the environment representation, it was only included in the experiments with the Dow Jones 30, the currencies and the commodities datasets.
@@ -102,11 +102,11 @@ Finally, if the portfolio is made up of equities of a relevant index, the benchm
 
 \section{Experiment: Algorithm Comparison} \label{sec:exp-algorithm-comparison}
 
-In this section, the results of the experiment to identify the suitability of the implemented \acrshort{drl} algorithms for portfolio optimisation under different market conditions are presented. The algorithms are trained on data with a simple environment representation, which includes the \acrshort{ohlcv} prices of the assets, and evaluated on the 5 datasets. The table \ref{tab:experiment_algorithms_a2c} summarises the results of the experiment for the \acrshort{a2c} algorithm, where each row corresponds to a different dataset and each column to a different performance metric. The results for the other algorithms are presented in Appendix \ref{app:experiment_algorithms_comparison}.
+In this section, the results of the experiment to identify the suitability of the implemented \acrshort{drl} algorithms for portfolio optimisation under different market conditions are presented. The algorithms are trained on data with a simple environment representation, which includes the \acrshort{ohlcv} prices of the assets, and evaluated on the five datasets. The table \ref{tab:experiment_algorithms_a2c} summarises the results of the experiment for the \acrshort{a2c} algorithm, where each row corresponds to a different dataset and each column to a different performance metric. The results for the other algorithms are presented in Appendix \ref{app:experiment_algorithms_comparison}.
 
 \input{tables/experiment_algorithms_a2c.tex}
 
-For the case of \acrshort{a2c}, the algorithm demonstrates competitive performance particularly for the DowJones30 dataset, achieving a cumulative return of 0.22 and a Sharpe ratio of 1.32. Positive results are also obtained with the commodities dataset, which demonstrates the highest cumulative return of 0.24 and a Sharpe ratio of 1.14. Despite being of the same asset class, the EuroStoxx50 and the FTSE100 datasets show relatively lower performance, with cumulative returns of 0.15 and 0.11, respectively. With regard to the currencies dataset, the performance of the algorithm is less impressive, with a cumulative return of -0.0012 and a Sharpe ratio of -0.0018. 
+For the case of \acrshort{a2c}, the algorithm demonstrates competitive performance particularly for the DowJones30 dataset, achieving a cumulative return of 21.65\% and a Sharpe ratio of 1.32. Positive results are also obtained with the commodities dataset, which demonstrates the highest cumulative return of 23.53\% and a Sharpe ratio of 1.14. Despite being of the same asset class, the EuroStoxx50 and the FTSE100 datasets show relatively lower performance, with cumulative returns of 14.67\% and 10.52\%, respectively. With regard to the currencies dataset, the performance of the algorithm is less impressive, with negative cumulative returns and Sharpe ratios, indicating that the algorithm struggles to learn a profitable strategy in this asset class.
 
 Similar observations can be made for the other algorithms, although it is worth pointing out that the performance varies significantly across different datasets. \todo{COMPLETE}
 
@@ -121,8 +121,19 @@ Taking the DowJones30 dataset with an environment representation made up of the 
 
 \input{tables/experiment_algorithms_dow30.tex}
 
-The results show that all the algorithms outperform the performance of the index for all the considered metrics, as well as the min-variance portfolio. Out of all the algorithms, \acrshort{ddpg} achieves the highest cumulative return of 0.23 and a Sharpe ratio of 1.49, followed by \acrshort{td3} with a cumulative return of 0.22 and a Sharpe ratio of 1.39. The \acrshort{a2c} algorithm also performs well, while \acrshort{ppo} has the lowest performance with a cumulative return of 0.19 and a Sharpe ratio of 1.24. However, none of these outperform the mean-variance and momentum benchmark strategies, with the latter achieving a Sharpe ratio of 1.74 and a cumulative return of 0.39, which is significantly higher than the performance of the \acrshort{drl} algorithms.
+The results show that all the algorithms outperform the performance of the index for all the considered metrics, as well as the min-variance portfolio. Out of all the algorithms, \acrshort{ddpg} achieves the highest cumulative return of 23.41\% and a Sharpe ratio of 1.49, followed by \acrshort{td3} with a cumulative return of 22.14\% and a Sharpe ratio of 1.39, while \acrshort{ppo} has the worst performance of the five with a cumulative return of 18.95\% and a Sharpe ratio of 1.24. However, none of these outperform the mean-variance and momentum benchmark strategies, with the latter achieving a Sharpe ratio of 1.74 and a cumulative return of 38.55\%, which is significantly higher than the performance of the \acrshort{drl} algorithms.
 
-% \section{Experiment: Environment Representation} \label{sec:environment-representation}
+\section{Experiment: Environment Representation} \label{sec:environment-representation}
+
+Another source of variability in the performance of the algorithms is the environment representation. In this section, the results of the experiment to evaluate the impact of different environment representations on the performance of the \acrshort{drl} algorithms are presented. For the experiment to be meaningful, it has been performed on the DowJones30 dataset, as it is the smallest equities dataset, the currencies and the commodities datasets. The choice provides the ability to compare the performance of the algorithms across different asset classes, while also allowing for a more manageable computational cost. The table \ref{tab:experiment_environment_sharpe} compares the performance according to the Sharpe ratio and, in Appendix \ref{app:experiment_environment_representation}, according to the cumulative return.
+
+\input{tables/experiment_environment_sharperatio.tex}
+
+The results show that the performance of the algorithms varies significantly across different environment representations. For the DowJones30 dataset, the \acrshort{ohlcv} prices representation achieves the highest Sharpe ratio of 1.49 for \acrshort{td3}, closely followed by the \acrshort{ohlcv} prices with indicators. The \acrshort{ohlcv} prices with covariance representation achieves 1.47 for \acrshort{sac}. For the complete dataset, it is only the \acrshort{a2c} algorithm that achieves a higher Sharpe ratio of 1.39 in this environment representation than the others. In this last instance, it is worth mentioning that, in terms of cumulative returns, \acrshort{a2c} achieves a better performance with the covariance dataset rather than the complete one.
+
+For the commodities dataset, the results are completely different to those of the DowJones30. The only coincidence is that \acrshort{td3} achieves the highest Sharpe ratio and highest cumulative return in the simple dataset. Moreover, when looking at this dataset, explicitly adding the covariance to the environment representation does not lead to better performance in terms of Sharpe ratio and there is only one instance where the cumulative returns are highest, which would be for the \acrshort{ddpg} algorithm with the complete dataset.
+
+With regards to the results for the currencies dataset, the performance of the algorithms is significantly lower, going negative in some case. A possible reason is the particular set of hyper-parameters used. In this particular experiment, all the algorithms for all the possible datasets were trained under the same configuration. 
+
 % \section{Experiment: Hyper-parameter Tuning} \label{sec:hyper-parameter-tuning}
 % \section{Experiment: Reward Function} \label{sec:reward-function}
