--- a/report/tables/hyperparameter_tuning.tex
+++ b/report/tables/hyperparameter_tuning.tex
@@ -9,7 +9,6 @@
 
     \endfoot
 
-    \hline
     \multirow{3}{*}{\textbf{A2C}}
     & Number of steps & \{5, 10, 20, 30, 40\} \\
     & Entropy coefficient & Uniform[1$\times$10$^{-8}$, 1$\times$10$^{-3}$] \\ 
@@ -26,6 +25,7 @@
     & Buffer size & \{50000, 100000, 200000, 500000\} \\ 
     & Learning rate & Uniform[1$\times$10$^{-5}$, 1$\times$10$^{-2}$] \\ \hline
 
+    \pagebreak
     \multirow{3}{*}{\textbf{TD3}}
     & Batch size & \{64, 100, 128, 256\} \\ 
     & Buffer size & \{500000, 1000000, 2000000\} \\ 
