Add experiments algorithms results

--- a/report/appendix/experiments.tex
+++ b/report/appendix/experiments.tex
@@ -6,13 +6,13 @@ In this Appendix, the results of the experiments conducted to evaluate the perfo
 
 The following tables summarise the results of the algorithm comparison experiment conducted on the 5 datasets with \acrshort{ohlcv} prices as the environment representation. The results for the \acrshort{a2c} algorithm are presented in Table \ref{tab:experiment_algorithms_a2c} in Section \ref{sec:exp-algorithm-comparison}, whereas for the \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3} and \acrshort{sac} algorithms, the results are presented in the following tables. 
 
-% \input{tables/experiment_algorithms_ppo.tex}
+\input{tables/experiment_algorithms_ppo.tex}
 
-% \input{tables/experiment_algorithms_ddpg.tex}
+\input{tables/experiment_algorithms_ddpg.tex}
 
-% \input{tables/experiment_algorithms_td3.tex}
+\input{tables/experiment_algorithms_td3.tex}
 
-% \input{tables/experiment_algorithms_sac.tex}
+\input{tables/experiment_algorithms_sac.tex}
 
 \section{Experiment: Environment Representation} \label{app:experiment_environment_representation}
 
