--- a/report/tables/hyperparameter_tuning.tex
+++ b/report/tables/hyperparameter_tuning.tex
@@ -14,6 +14,7 @@
     & Entropy coefficient & Uniform[1$\times$10$^{-8}$, 1$\times$10$^{-3}$] \\ 
     & Learning rate & Uniform[1$\times$10$^{-5}$, 1$\times$10$^{-2}$] \\ \hline
 
+    \pagebreak
     \multirow{4}{*}{\textbf{PPO}}
     & Number of steps & \{128, 256, 512, 1024, 2048\} \\ 
     & Entropy coefficient & Uniform[1$\times$10$^{-8}$, 1$\times$10$^{-3}$] \\ 
