Add explanation of hyper-parameter default config in appendix

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -118,6 +118,7 @@
 \include{appendix/state_representation}
 \include{appendix/hyperparameter_tuning}
 \include{appendix/datasets}
+\include{appendix/hyperparameters_experiment}
 \include{appendix/evaluation_metrics}
 \include{appendix/experiments}
 
